--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
-agp = "8.3.0"
+agp = "8.4.0"
 
-androidx-benchmark = "1.2.3"
+androidx-benchmark = "1.2.4"
 androidx-test-ext-junit = "1.1.5"
 coil = "3.0.0-alpha06"
-jetpackcompose-compiler = "1.5.8"
-compose-multiplatform = "1.6.0"
-kotlin = "1.9.22"
+compose = "1.6.7"
+compose-plugin = "1.6.10-rc01"
+kotlin = "2.0.0-RC2"
 ktor = "3.0.0-wasm2"
-aboutlib = "11.1.0"
-haze = "0.6.1"
+aboutlib = "11.1.4"
+haze = "0.7.1"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -18,19 +18,20 @@ android-lint = { id = "com.android.lint", version.ref = "agp" }
 android-test = { id = "com.android.test", version.ref = "agp" }
 baselineprofile = { id = "androidx.baselineprofile", version.ref = "androidx-benchmark" }
 cacheFixPlugin = { id = "org.gradle.android.cache-fix", version = "3.0.1" }
-composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "compose-multiplatform" }
+jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
+composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 dokka = { id = "org.jetbrains.dokka", version = "1.9.20" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-mavenpublish = { id = "com.vanniktech.maven.publish", version = "0.27.0" }
+mavenpublish = { id = "com.vanniktech.maven.publish", version = "0.28.0" }
 aboutlibraries = { id = "com.mikepenz.aboutlibraries.plugin", version.ref = "aboutlib" }
 
 [libraries]
 androidx-benchmark-macro = { module = "androidx.benchmark:benchmark-macro-junit4", version.ref = "androidx-benchmark" }
-androidx-core = "androidx.core:core-ktx:1.12.0"
+androidx-core = "androidx.core:core-ktx:1.13.1"
 androidx-collection = "androidx.collection:collection:1.4.0"
-androidx-activity-compose = "androidx.activity:activity-compose:1.8.2"
-androidx-compose-ui-test-manifest = "androidx.compose.ui:ui-test-manifest:1.6.3"
+androidx-activity-compose = "androidx.activity:activity-compose:1.9.0"
+androidx-compose-ui-test-manifest = "androidx.compose.ui:ui-test-manifest:1.6.7"
 androidx-profileinstaller = "androidx.profileinstaller:profileinstaller:1.3.1"
 androidx-test-ext-junit = { module = "androidx.test.ext:junit-ktx", version.ref = "androidx-test-ext-junit" }
 androidx-test-uiautomator = "androidx.test.uiautomator:uiautomator:2.3.0"
@@ -52,7 +53,7 @@ aboutlibraries-compose = { module = "com.mikepenz:aboutlibraries-compose-m3", ve
 # Build logic dependencies
 android-gradlePlugin = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
-compose-gradlePlugin = { module = "org.jetbrains.compose:compose-gradle-plugin", version.ref = "compose-multiplatform" }
+compose-gradlePlugin = { module = "org.jetbrains.compose:compose-gradle-plugin", version.ref = "compose-plugin" }
 
 [bundles]
 haze = ["haze-core", "haze-materials"]
